// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header/> User logged in should navigate to home page when logo is clicked 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      "/test",
    ]
  }
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "PUSH",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/test",
            "search": "",
            "state": undefined,
          },
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 1,
        "length": 2,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Header>
      <div
        className="header"
      >
        <nav
          className="header-content"
        >
          <Link
            id="app-icon"
            to="/"
          >
            <LinkAnchor
              href="/"
              id="app-icon"
              navigate={[Function]}
            >
              <a
                href="/"
                id="app-icon"
                onClick={[Function]}
              >
                 TrainTracks 
              </a>
            </LinkAnchor>
          </Link>
          <ul
            className="nav-items"
          >
            <li>
              <Link
                to="/"
              >
                <LinkAnchor
                  href="/"
                  navigate={[Function]}
                >
                  <a
                    href="/"
                    onClick={[Function]}
                  >
                     Dashboard 
                  </a>
                </LinkAnchor>
              </Link>
            </li>
            <li>
              <Link
                to="/journal"
              >
                <LinkAnchor
                  href="/journal"
                  navigate={[Function]}
                >
                  <a
                    href="/journal"
                    onClick={[Function]}
                  >
                     Journal 
                  </a>
                </LinkAnchor>
              </Link>
            </li>
            <li>
              <Link
                to="/calendar"
              >
                <LinkAnchor
                  href="/calendar"
                  navigate={[Function]}
                >
                  <a
                    href="/calendar"
                    onClick={[Function]}
                  >
                     Calendar 
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </ul>
          <div
            className="auth-btn-container"
          >
            <button
              id="logout"
              onClick={[Function]}
            >
              Sign out
            </button>
          </div>
        </nav>
      </div>
    </Header>
  </Router>
</MemoryRouter>
`;

exports[`<Header/> User logged in should navigate to the calendar when Calendar is clicked 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "PUSH",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          Object {
            "hash": "",
            "pathname": "/calendar",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 1,
        "length": 2,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/calendar",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Header>
      <div
        className="header"
      >
        <nav
          className="header-content"
        >
          <Link
            id="app-icon"
            to="/"
          >
            <LinkAnchor
              href="/"
              id="app-icon"
              navigate={[Function]}
            >
              <a
                href="/"
                id="app-icon"
                onClick={[Function]}
              >
                 TrainTracks 
              </a>
            </LinkAnchor>
          </Link>
          <ul
            className="nav-items"
          >
            <li>
              <Link
                to="/"
              >
                <LinkAnchor
                  href="/"
                  navigate={[Function]}
                >
                  <a
                    href="/"
                    onClick={[Function]}
                  >
                     Dashboard 
                  </a>
                </LinkAnchor>
              </Link>
            </li>
            <li>
              <Link
                to="/journal"
              >
                <LinkAnchor
                  href="/journal"
                  navigate={[Function]}
                >
                  <a
                    href="/journal"
                    onClick={[Function]}
                  >
                     Journal 
                  </a>
                </LinkAnchor>
              </Link>
            </li>
            <li>
              <Link
                to="/calendar"
              >
                <LinkAnchor
                  href="/calendar"
                  navigate={[Function]}
                >
                  <a
                    href="/calendar"
                    onClick={[Function]}
                  >
                     Calendar 
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </ul>
          <div
            className="auth-btn-container"
          >
            <button
              id="logout"
              onClick={[Function]}
            >
              Sign out
            </button>
          </div>
        </nav>
      </div>
    </Header>
  </Router>
</MemoryRouter>
`;

exports[`<Header/> User logged in should navigate to the dashboard when Dashboard is clicked 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      "/test",
    ]
  }
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "PUSH",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/test",
            "search": "",
            "state": undefined,
          },
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 1,
        "length": 2,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Header>
      <div
        className="header"
      >
        <nav
          className="header-content"
        >
          <Link
            id="app-icon"
            to="/"
          >
            <LinkAnchor
              href="/"
              id="app-icon"
              navigate={[Function]}
            >
              <a
                href="/"
                id="app-icon"
                onClick={[Function]}
              >
                 TrainTracks 
              </a>
            </LinkAnchor>
          </Link>
          <ul
            className="nav-items"
          >
            <li>
              <Link
                to="/"
              >
                <LinkAnchor
                  href="/"
                  navigate={[Function]}
                >
                  <a
                    href="/"
                    onClick={[Function]}
                  >
                     Dashboard 
                  </a>
                </LinkAnchor>
              </Link>
            </li>
            <li>
              <Link
                to="/journal"
              >
                <LinkAnchor
                  href="/journal"
                  navigate={[Function]}
                >
                  <a
                    href="/journal"
                    onClick={[Function]}
                  >
                     Journal 
                  </a>
                </LinkAnchor>
              </Link>
            </li>
            <li>
              <Link
                to="/calendar"
              >
                <LinkAnchor
                  href="/calendar"
                  navigate={[Function]}
                >
                  <a
                    href="/calendar"
                    onClick={[Function]}
                  >
                     Calendar 
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </ul>
          <div
            className="auth-btn-container"
          >
            <button
              id="logout"
              onClick={[Function]}
            >
              Sign out
            </button>
          </div>
        </nav>
      </div>
    </Header>
  </Router>
</MemoryRouter>
`;

exports[`<Header/> User logged in should navigate to the journal when Journal is clicked 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "PUSH",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          Object {
            "hash": "",
            "pathname": "/journal",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 1,
        "length": 2,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/journal",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Header>
      <div
        className="header"
      >
        <nav
          className="header-content"
        >
          <Link
            id="app-icon"
            to="/"
          >
            <LinkAnchor
              href="/"
              id="app-icon"
              navigate={[Function]}
            >
              <a
                href="/"
                id="app-icon"
                onClick={[Function]}
              >
                 TrainTracks 
              </a>
            </LinkAnchor>
          </Link>
          <ul
            className="nav-items"
          >
            <li>
              <Link
                to="/"
              >
                <LinkAnchor
                  href="/"
                  navigate={[Function]}
                >
                  <a
                    href="/"
                    onClick={[Function]}
                  >
                     Dashboard 
                  </a>
                </LinkAnchor>
              </Link>
            </li>
            <li>
              <Link
                to="/journal"
              >
                <LinkAnchor
                  href="/journal"
                  navigate={[Function]}
                >
                  <a
                    href="/journal"
                    onClick={[Function]}
                  >
                     Journal 
                  </a>
                </LinkAnchor>
              </Link>
            </li>
            <li>
              <Link
                to="/calendar"
              >
                <LinkAnchor
                  href="/calendar"
                  navigate={[Function]}
                >
                  <a
                    href="/calendar"
                    onClick={[Function]}
                  >
                     Calendar 
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </ul>
          <div
            className="auth-btn-container"
          >
            <button
              id="logout"
              onClick={[Function]}
            >
              Sign out
            </button>
          </div>
        </nav>
      </div>
    </Header>
  </Router>
</MemoryRouter>
`;

exports[`<Header/> User logged in should render a navigation bar with links for signed in user 1`] = `
<div
  className="header"
>
  <nav
    className="header-content"
  >
    <a
      href="/"
      id="app-icon"
      onClick={[Function]}
    >
       TrainTracks 
    </a>
    <ul
      className="nav-items"
    >
      <li>
        <a
          href="/"
          onClick={[Function]}
        >
           Dashboard 
        </a>
      </li>
      <li>
        <a
          href="/journal"
          onClick={[Function]}
        >
           Journal 
        </a>
      </li>
      <li>
        <a
          href="/calendar"
          onClick={[Function]}
        >
           Calendar 
        </a>
      </li>
    </ul>
    <div
      className="auth-btn-container"
    >
      <button
        id="logout"
        onClick={[Function]}
      >
        Sign out
      </button>
    </div>
  </nav>
</div>
`;

exports[`<Header/> User not logged in should render the nav bar with Login/Register links 1`] = `
<div
  className="header"
>
  <nav
    className="header-content"
  >
    <a
      href="/"
      id="app-icon"
      onClick={[Function]}
    >
       TrainTracks 
    </a>
    <div
      className="auth-btn-container"
    >
      <div>
        <button
          id="register"
          onClick={[Function]}
        >
          Register
        </button>
        <button
          id="login"
          onClick={[Function]}
        >
          Log in
        </button>
      </div>
    </div>
  </nav>
</div>
`;
